--- a/res/layout/list_row.xml
+++ b/res/layout/list_row.xml
@@ -17,9 +17,10 @@
                 
                 <TextView
                     android:id="@+id/bssid"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dip"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
+                    android:layout_weight="1"
                     android:text="BSSID"/>
             
         </LinearLayout>
@@ -38,9 +39,10 @@
             
             <TextView
                 android:id="@+id/signal"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
+                android:layout_weight="1"
                 android:text="Signal"/>
             
         </LinearLayout>
