--- a/res/layout/list_row.xml
+++ b/res/layout/list_row.xml
@@ -8,26 +8,35 @@
             android:layout_height="0dip"
             android:layout_width="match_parent"
             android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:orientation="horizontal">
-                <TextView
-                    android:id="@+id/ssid"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+            
+            <TextView
+                android:id="@+id/ssid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/WhiteSmoke"/>
                 
-                <TextView
-                    android:id="@+id/bssid"
-                    android:layout_width="0dip"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:layout_weight="1"
-                    android:text="BSSID"/>
+                    <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            /> 
+                
+            <TextView
+                android:id="@+id/bssid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/WhiteSmoke"
+                android:text="BSSID"/>
             
         </LinearLayout>
         <LinearLayout
             android:layout_height="0dip"
             android:layout_width="match_parent"
             android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:orientation="horizontal">
     
@@ -35,14 +44,20 @@
                 android:id="@+id/info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/WhiteSmoke"
                 android:text="Info"/>
+            
+                    <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            /> 
             
             <TextView
                 android:id="@+id/signal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_weight="1"
+                android:textColor="@color/WhiteSmoke"
                 android:text="Signal"/>
             
         </LinearLayout>
