--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,19 +1,14 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-   xmlns:tools="http://schemas.android.com/tools"
-   android:layout_width="match_parent"
-   android:layout_height="match_parent"
-   android:paddingBottom="@dimen/activity_vertical_margin"
-   android:paddingLeft="@dimen/activity_horizontal_margin"
-   android:paddingRight="@dimen/activity_horizontal_margin"
-   android:paddingTop="@dimen/activity_vertical_margin"
-   tools:context=".MainActivity" >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    android:background="@color/Black">
 
    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
-       android:layout_height="150dp"
-       android:layout_alignParentTop="true"
-       android:layout_centerHorizontal="true"
+       android:layout_height="0dip"
+       android:layout_weight="33"
        android:background="@android:color/background_dark"
        android:drawSelectorOnTop="false"
        android:divider="@color/Aqua"
@@ -25,11 +20,20 @@
    <com.androidplot.xy.XYPlot
      android:id="@+id/signalStrength"
      android:layout_width="fill_parent"
-     android:layout_height="150dp"
-     android:layout_marginLeft="1dp"
-     android:layout_marginRight="1dp"
-     android:layout_marginTop="10dp"
-     android:layout_below="@+id/listView1"
-     title="Графік потужності сигналу" />
+     android:layout_height="0dip"
+     android:layout_weight="33"
+     android:layout_margin="10dp"
+     androidPlot.rangeLabel="Потужність сигналу [dBm]"
+     androidPlot.domainLabel="Канали"
+     androidPlot.title="Графік потужності сигналу" />
+   
+   <com.androidplot.xy.XYPlot
+     android:id="@+id/signalTime"
+     android:layout_width="fill_parent"
+     android:layout_height="0dip"
+     android:layout_weight="33"
+     android:layout_margin="10dp"
+     androidPlot.rangeLabel="Потужність сигналу [dBm]"
+     androidPlot.title="Часовий графік потужності сигналу" />
       
-</RelativeLayout>
+</LinearLayout>
